tests/update/attribute_id_none/test.stderr
error: A struct field must be annotated with `#[crud_id]` to specify the database table
 --> tests/update/attribute_id_none/test.rs:5:13
  |
5 |   struct Test {
  |  _____________^
6 | |     id: i64,
7 | |     name: String,
8 | | }
  | |_^

error[E0599]: no method named `update` found for struct `Test` in the current scope
  --> tests/update/attribute_id_none/test.rs:19:6
   |
5  |   struct Test {
   |   ----------- method `update` not found for this struct
...
15 |       let _result = Test {
   |  ___________________-
16 | |         id: 1,
17 | |         name: "Debbie".to_string(),
18 | |     }
19 | |     .update(&pool)
   | |     -^^^^^^ method not found in `Test`
   | |_____|
   |
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `update`, perhaps you need to implement one of them:
           candidate #1: `digest::Update`
           candidate #2: `digest::digest::Digest`
           candidate #3: `digest::digest::DynDigest`
